--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h5><u><a href="https://www.youtube.com/">enlace a Youtube</a> </u></h5>
     <h5><u><a href="pagina1.html">pagina 1</a></u></h5>
     <h5><u><a href="/pag2.html">pag2</a></u></h5>
-    <h5><u><a href="/tablas.html">tablas</a></u></h5>
+    <h5><u><a href="tablas.html">tablas</a></u></h5>
      <h5><u><a href="/varios/Listado_HTML_y_CSS_vf.xlsx">archivo excel</a></u></h5>
     <h5><u><a href="mailto:dricaldi@senati.pe">email Instructor</a></u></h5>
 
@@ -58,4 +58,5 @@
                 <li>otras viñetas</li>
             </ul>
     
+
 </body>
